# moto

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.web  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  museum.html  mypy.ini  pyproject.toml  server.py
.github/: .main.yml
.github/workflows/: main.yml  pull-request.yml
database/flyway/: local.conf  migrate-db-local.sh  migrate-db-prod.sh  production.conf
database/flyway/migrations/: V10__add_comments_table.sql  V11__add_user_deleted_column.sql  V1__add_base_tables.sql  V2__add_race_history_table.sql  V3__add_user_table.sql  V4__add_session_table.sql  V5__add_garage_table.sql  V6__add_user_id_to_race_history.sql  V7__add_race_unique_table.sql  (+2 more)
frontend/: core.js  index.html  informer.js  insights.js  intro.html  intro.js  main.js  race.js  racerRecommender.js  social.js  user.js  utils.js  windows.js
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  ingress_nginx_svc.yaml  prod_cert_issuer.yaml  service.yaml  test_cert_issuer.yaml
scripts/: load_test_prod.py  migrate-db-local.sh  migrate-db-prod.sh  run_tests.sh  sync-data.sh  sync_data.py
src/: auth.py  constants.py  database.py  mail.py  main.py  server.py  startup.py
src/racing/: models.py  queries.py  routes.py  service.py
src/social/: models.py  queries.py  routes.py  service.py  validation.py
src/user/: models.py  queries.py  routes.py  service.py  validation.py
tests/: Dockerfile  conftest.py  dummy_data.py  factories.py
tests/racing/: test_routes.py
tests/social/: test_routes.py
tests/user/: test_routes.py
