[tool.poetry]
name = "moto"
version = "0.1.0"
description = ""
authors = ["Caspar Wylie"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.90.0"
uvicorn = "^0.20.0"
requests = "^2.28.2"
pydantic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
