[tool.poetry]
name = "moto"
version = "0.1.0"
description = ""
authors = ["Caspar Wylie"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.90.0"
uvicorn = "^0.20.0"
requests = "^2.28.2"
pydantic = "^1.10.4"
sqlalchemy = "^2.0.2"
mysqlclient = "^2.1.1"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
email-validator = "^1.3.1"
pytest-freezegun = "^0.4.2"
mypy = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
